--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Welcome</title>
+  <link rel="stylesheet" href="styles2.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600&family=Marcellus&family=Montserrat:wght@500;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <div class="top-left-corner">
-        <a href="preindex.html" class="logo-link">
-            <img src="cloudy.png" alt="Logo" class="logo">
-            <span class="app-name">Sky Mood</span>
-        </a>
+
+  <div class="fade-in-content">
+    <div class="logo-container">
+      <img src="cloudy.png" alt="Welcome Logo" class="logo">
+      <div class="app-name">Sky Mood</div>
     </div>
 
-    <div class="container">
-        <div id="inputSection">
-            <h1>Asa Man??</h1>
-            <input type="text" id="cityInput" placeholder="Enter city" />
-            <button onclick="getWeather()">Get Weather</button>
-            
-        </div>
-        <div id="weatherResult"></div>
-    </div>
+    <div class="tagline">Weather That Matches Your Mood!</div>
 
-    <script src="script.js"></script>
+    <a href="index.html">
+      <button class="get-started-btn">Get Started</button>
+    </a>
+  </div>
+
 </body>
 </html>
