--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="tagline">Weather That Matches Your Mood!</div>
 
-    <a href="index.html">
+    <a href="index2.html">
       <button class="get-started-btn">Get Started</button>
     </a>
   </div>
