--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="top-left-corner">
-        <a href="preindex.html" class="logo-link">
+        <a href="index.html" class="logo-link">
             <img src="cloudy.png" alt="Logo" class="logo">
             <span class="app-name">Sky Mood</span>
         </a>
