--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="fade-in-content">
     <div class="logo-container">
-      <img src="cloudy.png" alt="Welcome Logo" class="logo">
+      <img src="images/cloudy.png" alt="Welcome Logo" class="logo">
       <div class="app-name">Sky Mood</div>
     </div>
 
