--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 <body>
     <div class="top-left-corner">
         <a href="index.html" class="logo-link">
-            <img src="cloudy.png" alt="Logo" class="logo">
+            <img src="images/cloudy.png" alt="Logo" class="logo">
             <span class="app-name">Sky Mood</span>
         </a>
     </div>
